<resources>


    <string name="app_name">BookBuggs</string>

    <!--activity_catalog.xml strings-->
    <string name="empty_view_textview">Add Book(s) to Your Cart</string>

    <!--activity_editor.xml strings-->
    <string name="label_product_overview">Product Overview</string>
    <string name="edit_product_name">Product Name</string>
    <string name="edit_price">Unit Price</string>
    <string name="edit_quantity">Quantity</string>
    <string name="label_supplier_overview">Supplier Overview</string>
    <string name="edit_supplier_name">Supplier Name</string>
    <string name="edit_supplier_contact">Supplier Contact</string>
    <string name="button_minus_sign">-</string>
    <string name="button_plus_sign">+</string>
    <string name="minimum_quantity">0</string>

    <!--menu_editor.xml strings-->
    <string name="action_save">Save</string>
    <string name="action_contact_supplier">Contact Supplier</string>
    <string name="action_delete">Delete</string>

    <!--list_item.xml strings-->
    <string name="label_price">Price:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="price_for_single_item">(Price for single item)</string>
    <string name="button_sale">Sale</string>

    <!--CatalogActivity.java strings-->
    <string name="error_while_deleting_books">Error while deleting books</string>
    <string name="all_books_deleted">All books deleted</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!--EditorActivity.java strings-->
    <string name="edit_book">Edit Book</string>
    <string name="required">Required</string>
    <string name="price_cannot_be_negative">Price cannot be negative</string>
    <string name="quantity_cannot_be_negative">Quantity cannot be negative</string>
    <string name="editor_insert_book_failed">Error while saving book</string>
    <string name="editor_insert_book_successful">Book Saved</string>
    <string name="editor_update_book_failed">Error with updating pet</string>
    <string name="editor_update_book_successful">Book Updated</string>
    <string name="error_deleting_book">Error while deleting book</string>
    <string name="book_deleted">Book Deleted</string>
    <string name="discard_changes_and_quit_editing">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_this_book">Delete this Book?</string>
    <string name="bookbuggs">BookBuggs</string>
    <string name="add_book_s">Add Book(s)</string>
</resources>