<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <!--Product Overview-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/editor_main_linear_layout_padding"
        android:orientation="horizontal">

        <!--Product Label-->
        <TextView
            android:id="@+id/product_overview"
            style="@style/EditorLabel"
            android:text="@string/label_product_overview" />

        <!--Inout Fields-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <!--Product Name Field-->
            <EditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/black"
                android:textStyle="italic"
                android:hint="@string/edit_product_name"
                android:textAppearance="?android:textAppearanceMedium" />

            <!--Price Field-->
            <EditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:hint="@string/edit_price"
                android:backgroundTint="@android:color/black"
                android:inputType="number"
                android:maxLength="9"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!--Deduct quantity by one at a time-->
                <Button
                    android:id="@+id/subtract_quantity"
                    android:layout_width="@dimen/add_subtract_button_size"
                    android:layout_height="@dimen/add_subtract_button_size"
                    android:text="@string/button_minus_sign"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:backgroundTint="@android:color/black"
                    android:textAppearance="?android:textAppearanceLarge"/>

                <!--Quantity Field-->
                <EditText
                    android:id="@+id/product_quantity"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_quantity"
                    android:inputType="number"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:backgroundTint="@android:color/black"
                    android:maxLength="3"/>

                <!--Add quantity by one at a time-->
                <Button
                    android:id="@+id/add_quantity"
                    android:layout_width="@dimen/add_subtract_button_size"
                    android:layout_height="@dimen/add_subtract_button_size"
                    android:text="@string/button_plus_sign"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:backgroundTint="@android:color/black"
                    android:textAppearance="?android:textAppearanceLarge"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!--Supplier Overview-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/overivew_spacing_margin_top"
        android:padding="@dimen/editor_main_linear_layout_padding"
        android:orientation="horizontal">

        <!--Supplier Label-->
        <TextView
            android:id="@+id/supplier_overview"
            style="@style/EditorLabel"
            android:text="@string/label_supplier_overview" />

        <!--Input Fields-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <!--Supplier Name Field-->
            <EditText
                android:id="@+id/supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:backgroundTint="@android:color/black"
                android:hint="@string/edit_supplier_name" />

            <!--Supplier Contact Field-->
            <EditText
                android:id="@+id/supplier_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:backgroundTint="@android:color/black"
                android:hint="@string/edit_supplier_contact"
                android:inputType="phone"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>